# beacon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
beacon/: cli.py  config.py  dashboard.py  dashboard_render.py  importer.py  interview.py  logging_setup.py  media.py  network.py  scanner.py  session.py
data/: beacon.toml  michael-pawlus-profile.json
docs/: ai-job-search-roadmap.md  best-practices.md  enrichment-interview-guide.md  github-profile-README.md  journal.md  onboarding-guide.md  phase-1-detailed-plan.md  phase-5-journal.md  professional-audit-revised-strategy.md  site-recommendation.md  user-roadmap.md
migrations/: add_book_pub_type.py
site/: astro.config.mjs  package.json
tests/: test_adapters.py  test_agents.py  test_applications.py  test_automation.py  test_blog.py  test_cli.py  test_companies_diff.py  test_companies_discover_cli.py  test_company_context.py  test_config.py  test_content_db.py  test_cover_letter.py  test_crosspost.py  test_dashboard.py  test_enrichment.py  test_feedback.py  test_gaps_contract.py  test_generic_scraper.py  test_importer.py  test_integration.py  test_interview.py  test_interview_brief.py  test_job_fetcher.py  test_job_fit.py  test_job_highlights.py  test_job_scoring.py  test_jobs_db.py  test_linkedin.py  test_llm.py  test_match_jobs_cli.py  test_media.py  test_network.py  test_notifications.py  test_onboarding.py  test_presence_adapters.py  test_presence_cli.py  test_presence_generator.py  test_presence_site.py  test_profile_cli.py  test_profile_db.py  (+12 more)
web/: .gitignore  package-lock.json  package.json  vitest.config.ts
(+117 files in other folders)
