[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon"
version = "0.1.0"
description = "AI-First Company Intelligence Database — curate, score, and monitor companies where AI tools aren't just allowed, they're expected."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Michael Pawlus", email = "michaelpawlus@gmail.com" },
]
keywords = ["ai", "job-search", "company-research", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
scraping = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
llm = [
    "anthropic>=0.40.0",
]
docs = [
    "python-docx>=1.1.0",
    "fpdf2>=2.7.0",
]
notifications = [
    "plyer>=2.1.0",
]

[project.scripts]
beacon = "beacon.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"beacon/db/seed.py" = ["E501"]
"tests/*" = ["E501"]
"beacon/export/formatters.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
